fix to allow pickup list to be visible and accessible in all screen sizes

--- a/src/client/components/modals/OrderModal.css
+++ b/src/client/components/modals/OrderModal.css
@@ -1,52 +1,27 @@
 .order-elements--container {
   overflow-y: auto;
   overflow-x: hidden;
-  min-height:30px;
-  height: calc(100vh);
-  max-height: calc(100vh - 790px);
+  min-height: 100px;
+  max-height: calc(100vh - 380px) ;
 }
 
-.order-elements--wrap{
-  min-height:200px;
+.order-elements--wrap {
+  min-height: 200px;
+  max-height: calc(100vh - 400px) !important;
 }
 
-@media (max-height:1024px) {
-  .order-elements--container {
-    max-height: calc(100vh - 680px) !important;
-  }
-}
-@media  (max-height:823px) {
-  .order-elements--container {
-    max-height: calc(100vh - 350px) !important;
+@media (max-height: 1024px) {
+  .order-elements--wrap {
+    max-height: calc(100vh - 200px) !important;
   }
 }
 
-@media  (max-height:812px) {
-  .order-elements--container {
-    max-height: calc(100vh - 370px) !important;
+@media (max-height: 320px) {
+  .order-elements--wrap {
+    min-height: 300px;
   }
-}
-@media  (max-height:768px) {
   .order-elements--container {
-    max-height: calc(100vh - 580px) !important;
-  }
-}
-
-@media  (max-height:736px) {
-  .order-elements--container {
-    max-height: calc(100vh - 355px) !important;
-  }
-}
-
-@media  (max-height:667px) {
-  .order-elements--container {
-    max-height: calc(100vh - 365px) !important;
-  }
-}
-
-@media  (max-height:568px) {
-  .order-elements--container {
-    max-height: calc(100vh - 350px) !important;
+    min-height: 70px;
   }
 }
 
